Action Section Added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </div>
     </header>
 
+    <!-- Main Contents -->
     <main>
+      <!-- Action Area Starts Here -->
       <section id="action">
         <div class="container">
           <div class="action-content">
