Productive Section Added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,29 @@
           </div>
         </div>
       </section>
+
+      <!-- Productive User Area Starts Here -->
+      <section>
+        <div class="container">
+          <div class="productive-content">
+            <h2 class="text-center">Joined Thousands of Productive Users</h2>
+            <div class="productive-items">
+              <div class="productive-item text-center">
+                <h3 class="text-primary">50K</h3>
+                <span>Active Users</span>
+              </div>
+              <div class="productive-item text-center">
+                <h3 class="text-primary">2M+</h3>
+                <span>Focus Session</span>
+              </div>
+              <div class="productive-item text-center">
+                <h3 class="text-primary">95%</h3>
+                <span>Satisfaction Rate</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
