Feedback Section Added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,80 @@
           </div>
         </div>
       </section>
+
+      <!-- Feedback Section Starts Here -->
+      <section>
+        <div class="container">
+          <div class="feedback-content">
+            <h2 class="text-center">What our users say</h2>
+            <div class="feedback-items">
+              <div class="feedback-item">
+                <div class="user-ratings">
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                </div>
+                <h4>Loved by Designers</h4>
+                <p>
+                  This template instantly leveled up our presence.” – Studio
+                  Vertex
+                </p>
+                <div class="feedback-user">
+                  <img src="assets/avatar.png" alt="" />
+                  <div class="user-details">
+                    <h5>Reviewer name</h5>
+                    <span>Date</span>
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-item">
+                <div class="user-ratings">
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                </div>
+                <h4>Loved by Designers</h4>
+                <p>
+                  This template instantly leveled up our presence.” – Studio
+                  Vertex
+                </p>
+                <div class="feedback-user">
+                  <img src="assets/avatar.png" alt="" />
+                  <div class="user-details">
+                    <h5>Reviewer name</h5>
+                    <span>Date</span>
+                  </div>
+                </div>
+              </div>
+              <div class="feedback-item">
+                <div class="user-ratings">
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                  <img src="assets/icon-star.png" alt="" />
+                </div>
+                <h4>Loved by Designers</h4>
+                <p>
+                  This template instantly leveled up our presence.” – Studio
+                  Vertex
+                </p>
+                <div class="feedback-user">
+                  <img src="assets/avatar.png" alt="" />
+                  <div class="user-details">
+                    <h5>Reviewer name</h5>
+                    <span>Date</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
