--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
       </section>
 
-      <!-- Feedback Section Starts Here -->
+      <!-- Feedback Area Starts Here -->
       <section>
         <div class="container">
           <div class="feedback-content">
@@ -142,6 +142,20 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Focus Area Starts Here -->
+      <section>
+        <div class="container">
+          <div class="focus-content">
+            <h2>Ready to focus better</h2>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <button type="button" class="btn">Ger Started Free</button>
+            <img src="assets/wc-big.png" alt="" />
           </div>
         </div>
       </section>
