--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Main Contents -->
     <main>
       <!-- Action Area Starts Here -->
-      <section id="action">
+      <section>
         <div class="container">
           <div class="action-content">
             <div class="action-txt">
@@ -156,6 +156,41 @@
             </p>
             <button type="button" class="btn">Ger Started Free</button>
             <img src="assets/wc-big.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Area Starts Here -->
+      <section>
+        <div class="container">
+          <div class="contact-details">
+            <div class="contact-title">
+              <h2>Let’s Get in Touch</h2>
+            </div>
+            <form class="contact-form">
+              <div class="form-field">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  id="email"
+                  placeholder="example@email.com"
+                  required
+                />
+              </div>
+              <div class="form-field">
+                <label for="name">Email</label>
+                <input type="name" id="name" placeholder="Full Name" required />
+              </div>
+              <div class="form-field">
+                <label for="message">Email</label>
+                <textarea
+                  name="message"
+                  id="message"
+                  placeholder="Write your message...."
+                ></textarea>
+              </div>
+              <input type="submit" value="Send Message" class="btn" />
+            </form>
           </div>
         </div>
       </section>
