--- a/index.html
+++ b/index.html
@@ -195,5 +195,25 @@
         </div>
       </section>
     </main>
+
+    <!-- Footer Area Starts Here -->
+    <footer id="footer">
+      <div class="footer-content">
+        <div class="footer-logo text-center">
+          <a class="text-primary" href="index.html">LOGO</a>
+          <p>
+            Ready to elevate your online presence? Contact us today to discuss
+            your project and discover how we can bring your vision to life.
+          </p>
+        </div>
+
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">How it Works</a>
+          <a href="#">Services</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
