--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 <div class="feedback-user">
                   <img src="assets/avatar.png" alt="" />
                   <div class="user-details">
-                    <h5>Reviewer name</h5>
-                    <span>Date</span>
+                    <h5>Alex Chrimson</h5>
+                    <span>Date: 12-06-2025</span>
                   </div>
                 </div>
               </div>
@@ -115,8 +115,8 @@
                 <div class="feedback-user">
                   <img src="assets/avatar.png" alt="" />
                   <div class="user-details">
-                    <h5>Reviewer name</h5>
-                    <span>Date</span>
+                    <h5>Jack Luther</h5>
+                    <span>Date: 16-06-2025</span>
                   </div>
                 </div>
               </div>
@@ -136,8 +136,8 @@
                 <div class="feedback-user">
                   <img src="assets/avatar.png" alt="" />
                   <div class="user-details">
-                    <h5>Reviewer name</h5>
-                    <span>Date</span>
+                    <h5>Thomas Hoda</h5>
+                    <span>Date: 01-07-2025</span>
                   </div>
                 </div>
               </div>
@@ -189,7 +189,7 @@
                   placeholder="Write your message...."
                 ></textarea>
               </div>
-              <input type="submit" value="Send Message" class="btn" />
+              <input type="submit" value="Get in Touch" />
             </form>
           </div>
         </div>
